style.css
body {
    font-family: "Roboto";
    margin: 0;
}

ul {
    list-style: none;

    display: flex;
    gap: 10px;

    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #a9a9a9;
    font-size: 18px;
    transition-duration: 0.5s;
}

a:hover {
    color: #F9FAF8;
    transition: 0.5s;
} 

/* -- HEADER -- */

.header {
    padding: 20px 15%;
}

.header, .hero {
    background-color: #1F2937;
    color: #E5E7EB;
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header-logo {
    font-size: 24px;
    color: #F9FAF8;
}

/* -- HERO -- */

.hero {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 100px 20%;
    gap: 50px;
}

.hero-left {
    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}

.hero-right {
    display: flex;
    flex: 1;
    align-items: center;
    justify-content: center;
}

.hero-img {
    width: 100%;
    max-width: 450px;
    height: 450px;
    border-radius: 20px;
}

.hero-title {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
    margin-bottom: 0;
}

.hero-subtitle {
    color: #a9a9a9;
    font-size: 18px;
    margin-top: 5px;
    margin-bottom: 10px;
    max-width: 900pч;
}

.hero-btn {
    background-color: #3882F6;
    padding: 10px 40px;
    color: #E5E7EB;
    border: none;
    border-radius: 10px;
    font-size: 20px;
    font-weight: bold;
    cursor: pointer;
}

/* -- MAIN SECTION -- */

.main {
    padding: 50px 10%;
    text-align: center;
}

.info-title {
    display: flex;
    justify-content: center;
    font-size: 36px;
    color: #1F2937;
    font-weight: 900;
}

.wrapper-container {
    display: flex;
    justify-content: center;
    text-align: center;
    flex-wrap: wrap;
    gap: 50px;
}

.box {
    display: flex;
    justify-content: center;
    align-items: center;

    width: 200px;
    height: 200px;

    border: 4px solid #3882F6;
    border-radius: 20px;
}

.card {
    max-width: 190px;
}

.text {
    font-size: 18px;
}

/* -- QUOTE -- */

.quote-container {
    background-color: #E5E7EB;
    padding: 50px 10%;

    display: flex;
    justify-content: center;
    align-items: center;
}

.quote-text {
    font-size: 36px;
    font-weight: 300;
    font-style: italic;
    color: #1F2937;
}

.author {
    color: black;
    font-weight: bold;
    text-align: right;
    font-size: 20px;
    margin: 20px 10px;
}

/* -- SIGN UP CONTAINER -- */

.sign-up-container {
    padding: 100px 20%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.sign-up-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 70px;
    background-color: #3882F6;
    padding: 50px 100px;
    border: none;
    border-radius: 10px;
    color: #F9FAF8;
    text-align: left;
}

.sign-up-title {
    font-size: 20px;
    margin: 5px 0;
}

.sign-up-text {
    font-size: 18px;
    margin: 0;
}

.sign-up-btn {
    background-color: #3882F6;
    padding: 10px 25px;
    color: #E5E7EB;
    border: 2px solid #E5E7EB;
    border-radius: 10px;
    font-size: 15px;
    font-weight: bold;  
    cursor: pointer;
}

/* -- FOOTER -- */

.footer {
    background-color: #1F2937;
    padding: 20px 15%;
    color: #F9FAF8;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 18px;
}

